--- a/oving5/frontend/main.html
+++ b/oving5/frontend/main.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <meta charset="UTF-8">
-    <title>Erikcodee</title>
+    <title>Tihicode</title>
 </head>
 <body>
 <div id="app">
