added prefixed python code to input field

--- a/oving5/frontend/main.html
+++ b/oving5/frontend/main.html
@@ -10,8 +10,7 @@
 <div id="app">
     <h3>TihiCode😊️</h3>
     <textarea id="input" rows="15" cols="70">print("Hello, Python!\n")
-
-for i in range(10): print(i)</textarea>
+    </textarea>
     <div>
         <button id="run-btn">tihi😊️</button>
     </div>
